--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "firebase": "^10.9.0",
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^4.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
