--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
+    "react-icons": "^5.0.1",
+    "react-resizable": "^3.0.5"
   },
   "devDependencies": {
     "@types/jimp": "^0.2.28",
