--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "fabric": "^5.3.0",
     "firebase": "^10.9.0",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-draggable": "^4.4.6",
     "react-icons": "^5.0.1",
-    "react-resizable": "^3.0.5"
+    "react-resizable": "^3.0.5",
+    "react-rnd": "^10.4.1",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/jimp": "^0.2.28",
