--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.14",
-    "@mui/material": "^5.15.14",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "express": "^4.19.2",
@@ -26,7 +27,8 @@
     "react-icons": "^5.0.1",
     "react-resizable": "^3.0.5",
     "react-rnd": "^10.4.1",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/jimp": "^0.2.28",
