--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "fabric": "^5.3.0",
-    "firebase": "^10.9.0",
+    "firebase": "^10.10.0",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.8.1",
     "react": "^18.2.0",
@@ -29,6 +29,7 @@
     "sharp": "^0.33.3"
   },
   "devDependencies": {
+    "@babel/parser": "^7.24.4",
     "@types/jimp": "^0.2.28",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
@@ -39,6 +40,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
     "react-router-dom": "^6.22.3",
     "tailwindcss": "^3.4.1",
     "vite": "^5.2.0"
